--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
 
+
 .fade-in {
   opacity: 0;
   animation: fade-in-animation 3s ease-in-out forwards;
 }
 
 @keyframes fade-in-animation {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
